hphp/test/zend/bad/ext/standard/tests/strings/setlocale_variation4.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip Not valid for windows');
}
if (setlocale(LC_ALL,'en_US.utf8') === false || setlocale(LC_ALL,'en_AU.utf8') === false) {
    die('skip en_US.utf8/en_AU.utf8 locales not available');
}
?>